Avoid page breaks inside a commit when printing to PDF.

--- a/templates/github/css/main.css
+++ b/templates/github/css/main.css
@@ -50,6 +50,7 @@ html
 repeat-x;
   overflow:hidden;
   padding:0 .7em .7em;
+  page-break-inside: avoid;
 }
 
 #commit .envelope.selected
